--- a/net.resheim.eclipse.timekeeper.db/templates/Basic HTML.html
+++ b/net.resheim.eclipse.timekeeper.db/templates/Basic HTML.html
@@ -1,24 +1,27 @@
 <html>
 	<head>
 		<style>
-			body { font-family: "Helvetica Neue", sans-serif; font-size: 11pt}
-			table { border: 1px solid #eee; border-collapse: collapse; }
-			.header-row { background: #aaa; border-bottom: 1px solid #eee; color: #fff; }
-			.header-th { text-align: center; border-left: 1px solid #eee; }
-			.project-row { background: #eee; font-weight: bold }
-			.project-td { text-align: right; border-left: 1px solid #eee; }
-			.task-row { background: #eee; }
+			body { font-family: "Helvetica Neue", sans-serif; font-size: 1em; color: #444; }
+			div { border: 1px solid #c2d2e8; display: inline-block; }
+			table { border-collapse: collapse; font-size: 0.9em; }
+			td { padding-left: 0.5em; padding-right: 0.5em; }
+			.header-row { background: #eff5fb; border-bottom: 1px solid #c2d2e8; }
+			.header-th { text-align: center; padding: 0.5em }
+			.project-row { background: #eee; font-weight: bold;}
+			.project-td { text-align: right; border-left: 1px solid #fff }
+			.task-row { background: #f6f8fa; }
 			.activity-td { text-align: right; border-left: 1px solid #eee; }
-			.footer-row { background: #aaa; border-top: 1px solid #eee;  color: #fff; font-weight: bold}
-			.footer-td { text-align: right; border-left: 1px solid #bcc7c7; }
-			.sum-td { background: #aaa; text-align: right; border: 1px solid #eee; color: #fff; }
+			.sum-td { text-align: right; font-weight: bold; border-left: 1px solid #fff; }
+			.summary-row { background: #eee; font-weight: bold; }
+			.summary-td { padding: 0.25em; text-align: right; border-left: 1px solid #fff;}
 		</style>
 		<meta charset="UTF-8">
 	</head>
 	<h1>Timesheet</h1>
 	<#list weeks as week>
 	<!-- create one table for each week -->
-	<table width="100%">
+	<div>
+	<table>
 		<tr class="header-row">
 			<!-- first header column -->
 			<th>Week ${formatDateTime(week.firstDayOfWeek, 'w - YYYY')}</th>
@@ -32,39 +35,37 @@
 		<#list week.projects as project, tasks>
 		<tr class="project-row">
 			<td>${project}</td>
-			<!-- sum per project per day -->
 			<#list week.dates as date>							
 			<td class="project-td">${formatDuration(week.getSum(project, date))}</td>
 			</#list>
 			<td class="sum-td">${formatDuration(week.getSum(project))}</td>
 		</tr>
-		<!-- sub group per task -->
 		<#list tasks as task>		
 		<tr class="task-row">
-			<td><#if task.url??><a href="${task.getUrl}">${task.taskId}</a><#else>${task.taskId}</#if> :${task.summary}</td>
+			<td>&nbsp;<#if task.url??><a href="${task.url}">${task.taskId}</a><#else>${task.taskId}</#if> :${task.summary}</td>
 			<#list week.dates as date><td class="project-td">${formatDuration(date, task)}</td></#list>
 			<td class="sum-td">${formatDuration(week.getSum(task))}</td>
 		</tr>
-		<!-- group activities per date -->
 		<#list week.dates as date>							
 		<#list getActivities(date, task) as activity>
 		<tr> 
-			<td>-&nbsp;${activity.summary}</td>
+			<td>&nbsp;${activity.summary}</td>
 			<#list week.dates as date><td class="activity-td">${formatDuration(date, activity)}</td></#list>
-			<td class="sum-td">&nbsp;</td>
+			<td>&nbsp;</td>
 		</tr>
 		</#list>
 		</#list>
-		</#list> <!-- tasks ->
-		</#list> <!-- projects -->
-		<!-- footer -->
-		<tr class="footer-row">
+		</#list>
+		</#list>
+		<!-- summary -->
+		<tr class="summary-row">
 			<td>Daily total</td>
 			<#list week.dates as date>							
-			<td class="footer-td">${formatDuration(week.getSum(date))}</td>
+			<td class="summary-td">${formatDuration(week.getSum(date))}</td>
 			</#list>
-			<td class="footer-td">${formatDuration(week.getSum())}</td>
+			<td class="summary-td">${formatDuration(week.getSum())}</td>
 		</tr>
 	</table>
+	</div>
 	</#list>
 </html>
