Add description to the header of each template

--- a/net.resheim.eclipse.timekeeper.db/templates/Basic HTML.html
+++ b/net.resheim.eclipse.timekeeper.db/templates/Basic HTML.html
@@ -1,3 +1,12 @@
+<!-- 
+
+	Basic HTML
+	
+	This template uses lists tasks and and activities grouped per project. Each
+	row lists the amount of time spent per day of the selected week. A sum colum
+	is showing the total per row.
+	
+ -->
 <html>
 	<head>
 		<style>
