--- a/net.resheim.eclipse.timekeeper.db/templates/Default HTML.html
+++ b/net.resheim.eclipse.timekeeper.db/templates/Default HTML.html
@@ -1,3 +1,14 @@
+<!-- 
+
+	Default HTML
+	
+	This template uses lists tasks and and activities grouped per project. Each
+	row lists the amount of time spent per day of the selected week. A sum colum
+	is showing the total per row.
+	Font Awesome is used for icons and an internet connection is required for
+	these as they are not included.
+
+ -->
 <html>
 	<head>
 		<style>
