--- a/net.resheim.eclipse.timekeeper.db/templates/Default HTML.html
+++ b/net.resheim.eclipse.timekeeper.db/templates/Default HTML.html
@@ -46,7 +46,7 @@
 		<!-- group per project -->
 		<#list week.projects as project, tasks>
 		<tr class="project-row">
-			<td>${project}</td>
+			<td>${project.name}</td>
 			<#list week.dates as date>							
 			<td class="project-td">${formatDuration(week.getSum(project, date))}</td>
 			</#list>
@@ -54,7 +54,7 @@
 		</tr>
 		<#list tasks as task>		
 		<tr class="task-row">
-			<td><i class="far fa-clipboard" style="color: #aaa"></i>&nbsp;<#if task.url??><a href="${task.url}">${task.taskId}</a><#else>${task.taskId}</#if> :${task.summary}</td>
+			<td><i class="far fa-clipboard" style="color: #aaa"></i>&nbsp;<#if task.url??><a href="${task.url}">${task.taskId}</a><#else>${task.taskId}</#if> :${task.taskSummary}</td>
 			<#list week.dates as date><td class="project-td">${formatDuration(date, task)}</td></#list>
 			<td class="sum-td">${formatDuration(week.getSum(task))}</td>
 		</tr>
